Added 2nd recipe and started the 3rd

--- a/pizza.html
+++ b/pizza.html
@@ -13,10 +13,10 @@
 <h3>Ingredients:</h3>
 <h5>For the Dough:</h5>
 <ul>
-    Flour
-    Water
-    Yeast
-    Patience
+    <li>Flour</li>
+    <li>Water</li>
+    <li>Yeast</li>
+    <li>Patience</li>
 </ul>
 <h5>For the Topping:</h5>
 <ul>
