--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
     <h1>Odin Recipes</h1>
     <a href="pizza.html">Pizza</a>
     <a href="pasta.html">Pasta</a>
+    <a href="tiramisu.html">Tiramisu</a>
 </body>
 </html>
